fix for the editing for the put
