# controllers/quiltsController.js
@@ -73,6 +73,23 @@ const createQuilt = async (req, res) => {
 }
 
 const updateQuilt = async (req, res) => {
+    /* #swagger.parameters['body'] = {
+        in: 'body',
+        description: 'Quilt data',
+        required: true,
+        schema: {
+            "name" : "The Seven Sisters",
+            "yearCreated" : "1982",
+            "size" : "7x7",
+            "imageURL" : "images/sevenSisters.jpg",
+            "description" : "This quilt was made in honor of my six sisters and I.  Each sister has a different favorite color, so I made a block for each sister in her favorite color.  The quilt is hand-stitched and was awarded first place at the Utah County Historical Society 2005 quilt show.",
+            "quiltType" : "Handstitched",
+            "awards" : "honorable mention and first place",
+            "quiltShow" : "Washington County Fair 1982 and Utah County Historical Society 2005",
+            "price" : "not for sale",
+            "status" : "unavailable"
+        }
+    } */
     const contactJson = req.body;
     const id = req.params.id;
     try {
